--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,13 @@
 
 	<servlet-mapping>
 		<servlet-name>Test</servlet-name>
-		<url-pattern>/WEB-INF/test.jsp</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
+		</jsp-property-group>
+	</jsp-config>
 </web-app>
